Fix alignment of menu top items and reorder scss variables

--- a/Radzen.Blazor/themes/components/blazor/_menu.scss
+++ b/Radzen.Blazor/themes/components/blazor/_menu.scss
@@ -16,10 +16,10 @@ $menu-item-transition: none !default;
 
 $menu-top-item-padding: 0.5rem !default;
 $menu-top-item-border-radius: $menu-item-border-radius !default;
+$menu-top-item-color: $menu-item-color !default;
+$menu-top-item-background-color: $menu-background-color !default;
 $menu-top-item-hover-color: var(--rz-secondary) !default;
 $menu-top-item-hover-background-color: transparent !default;
-$menu-top-item-background-color: $menu-background-color !default;
-$menu-top-item-color: $menu-item-color !default;
 
 $context-menu-padding: 0 !default;
 $context-menu-box-shadow: 0 10px 8px 0 rgba(58, 71, 77, 0.06) !default;
@@ -45,10 +45,10 @@ $context-menu-box-shadow: 0 10px 8px 0 rgba(58, 71, 77, 0.06) !default;
 
   --rz-menu-top-item-padding: #{$menu-top-item-padding};
   --rz-menu-top-item-border-radius: #{$menu-top-item-border-radius};
+  --rz-menu-top-item-color: #{$menu-top-item-color};
+  --rz-menu-top-item-background-color: #{$menu-top-item-background-color};
   --rz-menu-top-item-hover-color: #{$menu-top-item-hover-color};
   --rz-menu-top-item-hover-background-color: #{$menu-top-item-hover-background-color};
-  --rz-menu-top-item-background-color: #{$menu-top-item-background-color};
-  --rz-menu-top-item-color: #{$menu-top-item-color};
 
   --rz-context-menu-padding: #{$context-menu-padding};
   --rz-context-menu-box-shadow: #{$context-menu-box-shadow};
@@ -69,6 +69,7 @@ $context-menu-box-shadow: 0 10px 8px 0 rgba(58, 71, 77, 0.06) !default;
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
   background-color: var(--rz-menu-top-item-background-color);
 
   .rz-context-menu & {
